--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ fastapi-htmx = "^0.2.2"
 pytailwindcss = "^0.2.0"
 python-multipart = "^0.0.6"
 fastapi-mail = "^1.4.1"
+nest-asyncio = "^1.5.8"
 
 
 [build-system]
