--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,11 @@ version = "0.1.0"
 description = ""
 authors = ["Bjoern Hauffe <oss@64b.de>"]
 readme = "README.md"
-packages = [{include = "solar_backend"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.103.1"
 httpx = "^0.24.1"
-pytest = "^7.4.0"
 fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
 asyncpg = "^0.28.0"
 uvicorn = "^0.23.2"
@@ -24,11 +22,13 @@ pydantic-settings = "^2.0.2"
 structlog = "^23.1.0"
 rich = "^13.5.2"
 fastapi-htmx = "^0.2.2"
-pytailwindcss = "^0.2.0"
 python-multipart = "^0.0.6"
 fastapi-mail = "^1.4.1"
 nest-asyncio = "^1.5.8"
 
+[tool.poetry.group.dev.dependencies]
+pytailwindcss = "^0.2.0"
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core"]
