--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ fastapi-htmx = "^0.2.2"
 python-multipart = "^0.0.6"
 fastapi-mail = "^1.4.1"
 nest-asyncio = "^1.5.8"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
 
 [tool.poetry.group.dev.dependencies]
 pytailwindcss = "^0.2.0"
