--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pytest-asyncio = "^0.21.1"
 pytest-async-sqlalchemy = "^0.2.0"
 faker = "^19.6.2"
 factory-boy = "^3.3.0"
+pytest-mock = "^3.11.1"
 
 [build-system]
 requires = ["poetry-core"]
