--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Bjoern Hauffe <oss@64b.de>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.11.9"
+python = "^3.11"
 fastapi = "^0.103.1"
 httpx = "^0.24.1"
 fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
