--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,10 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "config:best-practices",
+    ":maintainLockFilesMonthly"
+  ],
+  "schedule": [
+    "before 9am on Wednesday"
+  ]
 }
