--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,8 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:best-practices",
-    ":maintainLockFilesMonthly"
+    ":maintainLockFilesMonthly",
+    ":pinVersions"
   ],
   "schedule": [
     "before 9am on Wednesday"
