Fix Renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,7 @@
     {
       "matchDepTypes": ["dev-dependencies", "dev"],
       "matchUpdateTypes": ["patch", "minor"],
-      "groupName": "dev-dependencies (non-major)",
+      "groupName": "dev-dependencies (non-major)"
     }
   ],
   "schedule": [
