fix(renovate): Use matchDepNames instead of matchPackageNames

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
       "groupName": "dev-dependencies (non-major)"
     },
     {
-      "matchPackageNames": ["python"],
+      "matchDepNames": ["python"],
       "groupName": "Python",
       "separateMinorPatch": true,
       "separateMultipleMinor": true
