--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,8 @@
     "config:best-practices",
     "group:allDigest",
     ":maintainLockFilesMonthly",
-    ":pinVersions"
+    ":pinVersions",
+    ":separateMultipleMajorReleases"
   ],
   "packageRules": [
     {
