--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,13 @@ dependencies = [
     "sqlalchemy-utils>=0.41.2",
     "alembic>=1.14.0",
     "influxdb-client[async]>=1.49.0",
+    "pydantic>=2.0.0,<2.12",
     "pydantic-settings>=2.8.0",
     "structlog>=24.4.0",
     "rich>=13.9.0",
     "fastapi-htmx>=0.4.0",
     "python-multipart>=0.0.9",
-    "fastapi-mail>=1.4.1",
+    "fastapi-mail>=1.5.0",
     "nest-asyncio>=1.6.0",
     "sqlalchemy[asyncio]>=2.0.36",
     "humanize>=4.11.0",
@@ -42,6 +43,9 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["solar_backend/"]
 
 [tool.pytest.ini_options]
 markers = [
