simplify test handling and all tests are now passing

--- a/tests/test.env
+++ b/tests/test.env
@@ -3,17 +3,17 @@ AUTH_SECRET=test-secret-key-for-testing-only
 INFLUX_URL=http://localhost:8086
 INFLUX_OPERATOR_TOKEN=test-operator-token
 BASE_URL=http://test
-COOKIE_SECURE=false
+COOKIE_SECURE=False
 
 # FastMail settings
-FASTMAIL__SUPPRESS_SEND=true
+FASTMAIL__SUPPRESS_SEND=1
 FASTMAIL__MAIL_USERNAME=test@example.com
 FASTMAIL__MAIL_PASSWORD=testpassword
 FASTMAIL__MAIL_FROM=test@example.com
 FASTMAIL__MAIL_PORT=587
 FASTMAIL__MAIL_SERVER=smtp.test.com
 FASTMAIL__MAIL_FROM_NAME=Test
-FASTMAIL__MAIL_STARTTLS=false
-FASTMAIL__MAIL_SSL_TLS=false
-FASTMAIL__USE_CREDENTIALS=false
-FASTMAIL__VALIDATE_CERTS=false
+FASTMAIL__MAIL_STARTTLS=0
+FASTMAIL__MAIL_SSL_TLS=0
+FASTMAIL__USE_CREDENTIALS=0
+FASTMAIL__VALIDATE_CERTS=0
