--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "humanize>=4.11.0",
     "slowapi>=0.1.9",
     "fastapi-csrf-protect>=1.0.7",
+    "cryptography>=46.0.2",
 ]
 
 [project.optional-dependencies]
