--- a/tests/test.env
+++ b/tests/test.env
@@ -2,6 +2,8 @@ DATABASE_URL=sqlite+aiosqlite://
 AUTH_SECRET=test-secret-key-for-testing-only
 BASE_URL=http://test
 COOKIE_SECURE=False
+API_KEY=test-api-key-here
+
 
 # FastMail settings
 FASTMAIL__SUPPRESS_SEND=1
