fix: display password change error messages and upgrade to HTMX 2.0.7
- Password change error messages now display correctly in red alerts
- Success messages display in green with automatic form reset
- Upgraded HTMX from 1.9.10 to 2.0.7 for better compatibility
- Replaced broken response-targets extension with custom event handlers
- Added color classes to Tailwind safelist for backend-generated HTML

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "tailwind:build": "tailwindcss -i ./solar_backend/static/style.css -o ./solar_backend/static/output.css",
-    "tailwind:watch": "tailwindcss -i ./solar_backend/static/style.css -o ./solar_backend/static/output.css --watch"
+    "tailwind:build": "npx tailwindcss -i ./solar_backend/static/style.css -o ./solar_backend/static/output.css",
+    "tailwind:watch": "npx tailwindcss -i ./solar_backend/static/style.css -o ./solar_backend/static/output.css --watch"
   },
   "dependencies": {
     "tailwindcss": "^3.4.1",
