--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,22 +9,23 @@ services:
             dockerfile: Dockerfile
         container_name: backend-test
         restart: unless-stopped
-        ports:
-            - 8080:80
+        #ports:
+        #    - 8080:80
 
         env_file:
-            - .env.test
+            - .env
         environment:
-            - ENV_FILE=.env.test
+            - ENV_FILE=.env
             - DATABASE_URL=postgresql+asyncpg://deyehard:${POSTGRES_PASSWORD}@db-test:5432/deyehard
             # POSTGRES_PASSWORD from .env.test
-            #- OTEL_EXPORTER_OTLP_ENDPOINT=http://signoz-otel-collector-test:4317
-            #- OTEL_SERVICE_NAME=solar-backend-test
-            #- OTEL_TRACES_EXPORTER=otlp
-            #- OTEL_METRICS_EXPORTER=otlp
-            #- OTEL_LOGS_EXPORTER=otlp
+            - OTEL_EXPORTER_OTLP_ENDPOINT=http://signoz-otel-collector:4317
+            - OTEL_RESOURCE_ATTRIBUTES=service.name=solar-backend-test
+            - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+        networks:
+            - traefik-public
+            - signoz-net
         volumes:
-            - ./.env.test:/app/.env.test:ro
+            - .env:/app/.env:ro
         depends_on:
             db-test:
                 condition: service_healthy
@@ -42,10 +43,7 @@ services:
             - "traefik.http.routers.backend-test.rule=Host(`test.solar.64b.de`)"
             - "traefik.http.routers.backend-test.entrypoints=web,websecure"
             - "traefik.http.services.backend-test.loadbalancer.server.port=80"
-
-        networks:
-            - traefik-public
-    #            - test-internal
+            - "traefik.docker.network=traefik-public"
 
     # TimescaleDB (Test)
     db-test:
@@ -53,7 +51,7 @@ services:
         container_name: db-test
         restart: unless-stopped
         env_file:
-            - .env.test
+            - .env
         environment:
             - POSTGRES_USER=deyehard
             - POSTGRES_DB=deyehard
@@ -74,7 +72,7 @@ services:
         container_name: collector-test
         restart: unless-stopped
         env_file:
-            - .env.test
+            - .env
         environment:
             - PORT=10000
             - RUST_LOG=info
@@ -90,101 +88,13 @@ services:
                 condition: service_started
         networks:
             - traefik-public
-#
-# SignOz OTEL Collector (Test)
-#  signoz-otel-collector-test:
-#    image: signoz/signoz-otel-collector:0.88.11
-#    container_name: signoz-otel-collector-test
-#    restart: unless-stopped
-#    command:
-#      - "--config=/etc/otel-collector-config.yaml"
-#    volumes:
-#      - ./monitoring/signoz/otel-collector-config.yaml:/etc/otel-collector-config.yaml:ro
-#    environment:
-#      - OTEL_RESOURCE_ATTRIBUTES=deployment.environment=test
-#    ports:
-#      - "4317:4317"   # OTLP gRPC receiver
-#      - "4318:4318"   # OTLP HTTP receiver
-#    networks:
-#      - test-internal
-#
-#  # SignOz Query Service (Test)
-#  signoz-query-service-test:
-#    image: signoz/query-service:0.38.0
-#    container_name: signoz-query-service-test
-#    restart: unless-stopped
-#    command:
-#      - "-config=/root/config/prometheus.yml"
-#    volumes:
-#      - ./monitoring/signoz/prometheus.yml:/root/config/prometheus.yml:ro
-#      - signoz-test-data:/var/lib/signoz
-#    environment:
-#      - ClickHouseUrl=tcp://clickhouse-test:9000
-#      - STORAGE=clickhouse
-#      - GODEBUG=netdns=go
-#      - TELEMETRY_ENABLED=false
-#      - DEPLOYMENT_TYPE=docker-standalone-amd
-#    depends_on:
-#      - clickhouse-test
-#    networks:
-#      - test-internal
-#
-#  # SignOz Frontend (Test)
-#  signoz-frontend-test:
-#    image: signoz/frontend:0.38.0
-#    container_name: signoz-frontend-test
-#    restart: unless-stopped
-#    environment:
-#      - FRONTEND_API_ENDPOINT=http://signoz-query-service-test:8080
-#    depends_on:
-#      - signoz-query-service-test
-#    labels:
-#      - "traefik.enable=true"
-#      - "traefik.docker.network=traefik-public"
-#      - "traefik.http.routers.signoz-test.rule=Host(`signoz.solar.64b.de`) && PathPrefix(`/test`)"
-#      - "traefik.http.routers.signoz-test.entrypoints=web"
-#      - "traefik.http.services.signoz-test.loadbalancer.server.port=3301"
-#      - "traefik.http.middlewares.signoz-test-stripprefix.stripprefix.prefixes=/test"
-#      - "traefik.http.routers.signoz-test.middlewares=signoz-test-stripprefix"
-#    networks:
-#      - traefik-public
-#      - test-internal
-#
-#  # ClickHouse (SignOz storage backend) (Test)
-#  clickhouse-test:
-#    image: clickhouse/clickhouse-server:23.11-alpine
-#    container_name: clickhouse-test
-#    restart: unless-stopped
-#    ulimits:
-#      nofile:
-#        soft: 262144
-#        hard: 262144
-#    volumes:
-#      - ./data/test/signoz/clickhouse:/var/lib/clickhouse
-#    environment:
-#      - CLICKHOUSE_DB=signoz
-#      - CLICKHOUSE_USER=signoz
-#      - CLICKHOUSE_PASSWORD=signoz_password_test
-#    networks:
-#      - test-internal
-#
-#  # PostgreSQL Exporter (Test)
-#  postgres-exporter-test:
-#    image: prometheuscommunity/postgres-exporter:latest
-#    container_name: postgres-exporter-test
-#    restart: unless-stopped
-#    env_file:
-#      - .env.test
-#    environment:
-#      - DATA_SOURCE_NAME=postgresql://deyehard:${POSTGRES_PASSWORD}@db-test:5432/deyehard?sslmode=disable
-#    depends_on:
-#      - db-test
-#    networks:
-#      - test-internal
 
 networks:
     traefik-public:
         external: true
+    signoz-net:
+        external: true
+        name: signoz-net
 #    test-internal:
 #        name: test-internal
 #volumes:
