--- a/dbus-victron-http-bridge/config.ini.example
+++ b/dbus-victron-http-bridge/config.ini.example
@@ -1,6 +1,7 @@
 [backend]
 # Your backend URL (without trailing slash)
-url = https://your-backend.com
+base_url = https://your-backend.com
+endpoint_path = /api/victron/measurements
 
 # API key for authentication (generated in backend user settings)
 api_key = your-api-key-here
