feat: add Docker registry deployment with CI/CD automation
Implement comprehensive Docker registry-based deployment system using
git.64b.de/bjoern/deye_hard with automated CI/CD builds via GitHub Actions.

## CI/CD Pipeline
- Add GitHub Actions workflow for automated image builds
- Support automatic tagging based on branch/commit/semantic version
- Multi-tag strategy (latest, main, test, staging, prod, sha-xxxxx, v1.x.x)
- Manual workflow trigger with environment/tag selection

## Deployment Infrastructure
- Update docker-compose files (test, staging, prod) to use registry images
- Replace local builds with image pulls from git.64b.de
- Add IMAGE_TAG environment variable for version control
- Set environment-specific default tags (test, staging, prod)

## Deployment Scripts
- Enhance deploy-*.sh scripts with registry authentication
- Add automatic Docker login before image pull
- Update healthcheck URLs (yourdomain.com → solar.64b.de)
- Improve error handling for pull failures
- Fix script paths to deployment/ directory

## Build Tools
- Add build-and-push.sh for manual image builds
- Support custom tags and environment-specific builds
- Include git SHA tagging for traceability
- Interactive confirmation before pushing

## Configuration
- Add IMAGE_TAG to .env.*.example files
- Create .env.image-tags.example with tagging strategy guide
- Update BASE_URL in examples (solar.64b.de)

## Documentation
- Create comprehensive docs/DOCKER-REGISTRY.md
  - Registry authentication guide
  - CI/CD workflow documentation
  - Image tagging strategy
  - Troubleshooting guide
  - Best practices
- Update README.md with CI/CD section and deployment info
- Add Docker registry and CI/CD section to CLAUDE.md
- Update docs/DEPLOYMENT.md with registry deployment procedures
- Create DOCKER-DEPLOYMENT-SUMMARY.md for quick reference

## Image Optimization
- Comprehensive .dockerignore updates
- Exclude deployment files, tests, docs, development tools
- Reduce image size by excluding unneces

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,80 @@
+# Environment files
 .env
+.env.*
 *.env
+!.env.example
+
+# Git
+.git/
+.gitignore
+.gitmodules
+.gitattributes
+
+# Tests
 tests/
+pytest.ini
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Documentation
+*.md
+!README.md
+docs/
+img/
+
+# Deployment files (not needed in production image)
+deployment/
+docker-compose*.yml
+!docker-compose.yml
+Dockerfile*
+.dockerignore
+
+# CI/CD
+.github/
+.gitlab-ci.yml
+
+# Development files
+.venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Node modules (for Tailwind CSS development)
+node_modules/
+package-lock.json
+tailwind.config.js
+
+# Data and logs (should be in volumes, not image)
+data/
+logs/
+*.log
+
+# Backup files
+*.bak
+*.backup
+*.sql
+*.dump
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Alembic (migrations are included, but not environment-specific data)
+alembic.ini.example
