--- a/.env.staging.example
+++ b/.env.staging.example
@@ -25,11 +25,17 @@ COOKIE_SECURE=False
 # =============================================================================
 # Application Settings
 # =============================================================================
-BASE_URL=http://staging.yourdomain.com
+BASE_URL=http://staging.solar.64b.de
 TZ=Europe/Berlin
 
 # Store detailed DC channel (MPPT) measurements
 STORE_DC_CHANNEL_DATA=true
+
+# =============================================================================
+# Docker Registry & Deployment
+# =============================================================================
+# Docker image tag to use (staging, v1.x.x-rc.1, or sha-xxxxx)
+IMAGE_TAG=staging
 
 # =============================================================================
 # Email Configuration
