--- a/.env.prod.example
+++ b/.env.prod.example
@@ -26,11 +26,18 @@ COOKIE_SECURE=True
 # =============================================================================
 # Application Settings
 # =============================================================================
-BASE_URL=https://yourdomain.com
+BASE_URL=https://solar.64b.de
 TZ=Europe/Berlin
 
 # Store detailed DC channel (MPPT) measurements
 STORE_DC_CHANNEL_DATA=true
+
+# =============================================================================
+# Docker Registry & Deployment
+# =============================================================================
+# Docker image tag to use (prod, v1.0.0, or specific semantic version)
+# IMPORTANT: Production should use semantic version tags only (v1.0.0, v1.1.0, etc.)
+IMAGE_TAG=prod
 
 # =============================================================================
 # Email Configuration - REQUIRED FOR PRODUCTION
