--- a/.env.test.example
+++ b/.env.test.example
@@ -24,11 +24,17 @@ COOKIE_SECURE=False
 # =============================================================================
 # Application Settings
 # =============================================================================
-BASE_URL=http://test.yourdomain.com
+BASE_URL=http://test.solar.64b.de
 TZ=Europe/Berlin
 
 # Store detailed DC channel (MPPT) measurements
 STORE_DC_CHANNEL_DATA=true
+
+# =============================================================================
+# Docker Registry & Deployment
+# =============================================================================
+# Docker image tag to use (test, sha-xxxxx, or specific version)
+IMAGE_TAG=test
 
 # =============================================================================
 # Email Configuration (Optional for testing)
