--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "itsdangerous>=2.2.0",
     "sqlalchemy-utils>=0.41.2",
     "alembic>=1.14.0",
-    "pydantic>=2.0.0,<2.12",
+    "pydantic>=2.0.0",
     "pydantic-settings>=2.8.0",
     "structlog>=24.4.0",
     "rich>=13.9.0",
