--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "tailwind:build": "npx tailwindcss -i ./solar_backend/static/style.css -o ./solar_backend/static/output.css",
     "tailwind:watch": "npx tailwindcss -i ./solar_backend/static/style.css -o ./solar_backend/static/output.css --watch"
   },
-  "dependencies": {
-    "tailwindcss": "^3.4.1",
-    "daisyui": "^4.11.1"
+  "devDependencies": {
+    "daisyui": "^5.3.10",
+    "tailwindcss": "^4.1.16"
   }
 }
