--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -2,16 +2,8 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches:
-      - main
-      - master
-      - deployment
     tags:
-      - 'v*.*.*'
-  pull_request:
-    branches:
-      - main
-      - master
+      - '**'  # Build on any tag from any branch
   workflow_dispatch:
     inputs:
       environment:
@@ -28,8 +20,8 @@ on:
         type: string
 
 env:
-  REGISTRY: git.64b.de
-  IMAGE_NAME: bjoern/deye_hard
+  REGISTRY: ghcr.io
+  IMAGE_NAME: bjoernh/pvinverterlink
 
 jobs:
   build-and-push:
@@ -47,12 +39,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
-          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels)
         id: meta
@@ -63,29 +55,18 @@ jobs:
           # Initialize tags array
           TAGS=""
 
-          # Add SHA tag
+          # Add SHA tag (always)
           TAGS="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${SHORT_SHA}"
 
-          # Add branch-based tags
-          if [[ "${{ github.ref }}" == "refs/heads/main" ]] || [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-            TAGS="${TAGS},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
-            TAGS="${TAGS},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main"
-          elif [[ "${{ github.ref }}" == "refs/heads/deployment" ]]; then
-            TAGS="${TAGS},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:deployment"
-          elif [[ "${{ github.ref_type }}" == "branch" ]]; then
-            BRANCH_NAME=$(echo "${{ github.ref_name }}" | sed 's/[^a-zA-Z0-9._-]/-/g')
-            TAGS="${TAGS},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${BRANCH_NAME}"
-          fi
-
-          # Add semantic version tags if this is a tag push
+          # Add tag-based tags if this is a tag push
           if [[ "${{ github.ref_type }}" == "tag" ]]; then
             VERSION=${{ github.ref_name }}
             TAGS="${TAGS},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${VERSION}"
 
-            # Also tag as prod for semantic version tags
-            TAGS="${TAGS},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:prod"
+            # Add latest tag for tags
+            TAGS="${TAGS},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
 
-            # Extract major and minor versions
+            # Extract major and minor versions for semantic version tags
             if [[ $VERSION =~ ^v([0-9]+)\.([0-9]+)\. ]]; then
               MAJOR="${BASH_REMATCH[1]}"
               MINOR="${BASH_REMATCH[2]}"
@@ -105,14 +86,6 @@ jobs:
             fi
           fi
 
-          # Add test and staging tags for non-production branches
-          if [[ "${{ github.ref }}" == "refs/heads/"* ]] && \
-             [[ "${{ github.ref }}" != "refs/heads/main" ]] && \
-             [[ "${{ github.ref }}" != "refs/heads/master" ]] && \
-             [[ "${{ github.ref_type }}" != "tag" ]]; then
-            TAGS="${TAGS},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test"
-          fi
-
           echo "tags=${TAGS}" >> $GITHUB_OUTPUT
           echo "version=sha-${SHORT_SHA}" >> $GITHUB_OUTPUT
           echo "build-date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
@@ -125,7 +98,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: |
-            org.opencontainers.image.title=Deye Hard Backend
+            org.opencontainers.image.title=PVInverterLink
             org.opencontainers.image.description=FastAPI-based solar inverter management system
             org.opencontainers.image.version=${{ steps.meta.outputs.version }}
             org.opencontainers.image.created=${{ steps.meta.outputs.build-date }}
