--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,9 +40,11 @@ dev = [
     "pytest>=8.3.0",
     "pytest-asyncio>=0.25.0",
     "pytest-async-sqlalchemy>=0.2.0",
+    "pytest-cov>=6.0.0",
     "faker>=33.0.0",
     "factory-boy>=3.3.0",
     "pytest-mock>=3.14.0",
+    "ruff>=0.9.0",
 ]
 
 [build-system]
@@ -64,3 +66,36 @@ markers = [
 filterwarnings = [
     "ignore::DeprecationWarning",
 ]
+
+[tool.ruff]
+line-length = 120
+target-version = "py313"
+exclude = [
+    ".git",
+    ".venv",
+    "venv",
+    "__pycache__",
+    "alembic",
+    "build",
+    "dist",
+    "*.egg-info",
+]
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "UP",  # pyupgrade
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "SIM", # flake8-simplify
+]
+ignore = [
+    "E501",  # line too long (handled by formatter)
+    "B008",  # function-call-in-default-argument (required for FastAPI Depends())
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["solar_backend"]
