docs: Documentation updated

--- a/.env.image-tags.example
+++ b/.env.image-tags.example
@@ -2,7 +2,7 @@
 # Copy this file to .env.image-tags and customize for your deployment strategy
 #
 # These tags define which Docker image version to pull for each environment.
-# The tags correspond to images in the registry: git.64b.de/bjoern/deye_hard
+# The tags correspond to images in the registry: ghcr.io/bjoernh/pvinverterlink
 
 # =============================================================================
 # Test Environment
